--- a/src/components/Playbar/playbar.module.scss
+++ b/src/components/Playbar/playbar.module.scss
@@ -1,8 +1,8 @@
 .playbar {
-  position: fixed;
+  position: absolute;
   background-color: #9340fe;
 
-  width: calc(100vw - 40px);
+  width: 100%;
   height: 70px;
 
   left: 0;
@@ -50,4 +50,10 @@
   gap: 20px;
   flex-basis: 600px;
   margin-left: auto;
+}
+
+@media (max-width: 946px) {
+  .credits {
+    display: none;
+  }
 }
