--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 
   &::-webkit-scrollbar {
@@ -11,7 +12,7 @@
 .wrapper {
   display: flex;
   padding: 10px;
-  gap: 60px;
-  width: min(600px, 90vw);
+  width: 100%;
+  min-width: 375px;
   margin: auto;
 }
