--- a/src/global.module.scss
+++ b/src/global.module.scss
@@ -11,7 +11,7 @@
 
 .wrapper {
   display: flex;
-  padding: 10px;
+  justify-content: center;
   width: 100%;
   min-width: 375px;
   margin: auto;
