--- a/src/components/Playbar/playbar.module.scss
+++ b/src/components/Playbar/playbar.module.scss
@@ -1,6 +1,7 @@
 .playbar {
   position: absolute;
   background-color: #9340fe;
+  animation: slideTop 3s ease forwards;
 
   width: 100%;
   height: 70px;
@@ -55,5 +56,16 @@
 @media (max-width: 946px) {
   .credits {
     display: none;
+  }
+}
+
+@keyframes slideTop {
+  0% {
+    opacity: 0;
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
