--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -7,6 +7,7 @@
 .search {
   width: 100%;
   max-width: 700px;
+  animation: zoomIn 1.2s ease forwards;
 }
 
 .input_container {
@@ -39,4 +40,15 @@
   padding: 15px;
   border: 1px solid #eee;
   border-radius: 20px;
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
